fix rest client

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -27,7 +27,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 address=http://localhost:8080
 client.address=http://localhost:4200
 econews.address=http://localhost:4200/welcome
-sender.email.address=${SENDER_EMAIL_ADDRESS}
+sender.email.address=${EMAIL_ADDRESS}
 google.clientId=${GOOGLE_CLIENT_ID}
 
 # Token expiration time
