--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -7,8 +7,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 greencityuser.server.address=http://localhost:8080
 
 # Email for service-to-service communication with GreenCityUser
-client.address=test@greencity.ua
-sender.email.address=test@greencity.ua
+client.address=http://localhost:4200
+spring.liquibase.parameters.service-email=test@greencity.ua
 
 # Token expiration time
 tokenKey=1
