Change refreshInterval to 1 minute

--- a/greencity-chart/templates/ClusterExternalSecret.yaml
+++ b/greencity-chart/templates/ClusterExternalSecret.yaml
@@ -14,7 +14,7 @@ spec:
   refreshTime: "1m"
 
   externalSecretSpec:
-    refreshInterval: "0"
+    refreshInterval: "1m"
 
     secretStoreRef:
       name: cluster-secret-store
