--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -57,3 +57,5 @@ greencityuser.server.address = http://localhost:8060
 #AzureCloudStorage
 azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
+
+pg.dump.path=${PATH_TO_PG_DUMP:pg_dump}
