--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -64,3 +64,4 @@ greencityuser.server.address = ${GREENCITYUSER_SERVER_ADDRESS}
 azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
 
+pg.dump.path=${PATH_TO_PG_DUMP:pg_dump}
