--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -15,3 +15,5 @@ tokenKey=1
 accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 verifyEmailTimeHour=24
+
+pg.dump.path=${PATH_TO_PG_DUMP:pg_dump}
