delete env variable from application-dev.properties

--- a/core/src/main/resources/application-docker.properties
+++ b/core/src/main/resources/application-docker.properties
@@ -58,4 +58,4 @@ greencityuser.server.address = http://user:8060
 azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
 
-pg.dump.path=${PATH_TO_PG_DUMP:pg_dump}
+pg.dump.path=pg_dump
