--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -20,4 +20,4 @@ verifyEmailTimeHour=24
 azure.connection.string=test
 azure.container.name=test
 
-pg.dump.path=${PATH_TO_PG_DUMP:pg_dump}
+pg.dump.path=pg_dump
