--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -9,7 +9,7 @@ EVENT_COMMENT_LIKE={user} liked your comment {message} to event {secondMessage}.
 EVENT_COMMENT_REPLY_TITLE=You received a comment reply
 EVENT_COMMENT_REPLY={user} commented your comment {message} to event {secondMessage}.
 
-ECONEWS_COMMENT_TITLE=Your received a comment
+ECONEWS_COMMENT_TITLE=You received a comment
 ECONEWS_COMMENT={user} commented on your news {message}.
 ECONEWS_CREATED_TITLE=You have created eco news
 ECONEWS_CREATED=You successfully created eco news {message}.
@@ -33,3 +33,6 @@ FRIEND_REQUEST_ACCEPTED_TITLE=Your friend request was accepted
 FRIEND_REQUEST_ACCEPTED={user} accepted your friend request.
 FRIEND_REQUEST_RECEIVED_TITLE=You have received a friend request
 FRIEND_REQUEST_RECEIVED={user} sent you a friend request.
+
+HABIT_LIKE_TITLE=Your habit received a like
+HABIT_LIKE=Habit {message} received a like from {user}.
