--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -10,6 +10,7 @@ max-http-form-post-size=100MB
 spring.liquibase.parameters.service-email=service@greencity.ua
 
 greencity.authorization.googleApiKey=${GOOGLE_API_KEY:default-key}
+google.maps.api.key=${GOOGLE_MAP_API_KEY}
 
 # Swagger configuration
 springdoc.paths-to-match=/**
