change application props

--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -3,6 +3,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+address=http://localhost:8080
+google.maps.api.key=""
+
 #RestTemplate
 greencityuser.server.address=http://localhost:8080
 
