--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -59,3 +59,5 @@ azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
 
 pg.dump.path=pg_dump
+
+google.maps.api.key=${GOOGLE_MAP_API_KEY}
