--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -35,3 +35,5 @@ FRIEND_REQUEST_RECEIVED_TITLE=You have received a friend request
 FRIEND_REQUEST_RECEIVED={user} sent you a friend request.
 
 HABIT_LIKE=Habit {message} received a like from {user}.
+HABIT_INVITE_TITLE=Habit invitation.
+HABIT_INVITE=You were invited to habit.
