Fixed user tag notification

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -8,6 +8,8 @@ EVENT_COMMENT_LIKE_TITLE=You received a like.
 EVENT_COMMENT_LIKE={user} liked your comment {message} to event {secondMessage}.
 EVENT_COMMENT_REPLY_TITLE=You received a comment reply
 EVENT_COMMENT_REPLY={user} commented your comment {message} to event {secondMessage}.
+EVENT_COMMENT_USER_TAG_TITLE=You have been tagged in the comment.
+EVENT_COMMENT_USER_TAG={user} mention you in comment {message} to event {secondMessage}.
 
 ECONEWS_COMMENT_TITLE=You received a comment
 ECONEWS_COMMENT={user} commented on your news {message}.
