--- a/az-cd-pipeline-prog-stage.yml
+++ b/az-cd-pipeline-prog-stage.yml
@@ -69,7 +69,7 @@ stages:
       displayName: Build image
       inputs:
         containerRegistry: 'Dockerhub_Skyere'
-        repository: 'skyere/greencity'
+        repository: 'yharasym/greencity'
         command: 'buildAndPush'
         Dockerfile: 'Dockerfile'
         tags: |
@@ -110,5 +110,5 @@ stages:
                 chartType: 'FilePath'
                 chartPath: '$(System.ArtifactsDirectory)/drop/greencity-chart'
                 releaseName: 'greencity'
-                overrideValues: 'ingress.hostname=greencity.test.greencity.cx.ua,deployment.image=skyere/greencity:prod-$(Build.BuildId),externalSecret.vaultUrl=https://greencity.vault.azure.net/'
+                overrideValues: 'ingress.hostname=greencity.test.greencity.cx.ua,deployment.image=yharasym/greencity:prod-$(Build.BuildId),externalSecret.vaultUrl=https://greencity.vault.azure.net/'
                 arguments: '--debug'
