Added notification about comments in custom habit

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -39,3 +39,5 @@ FRIEND_REQUEST_RECEIVED={user} sent you a friend request.
 HABIT_LIKE=Habit {message} received a like from {user}.
 HABIT_INVITE_TITLE=Habit invitation.
 HABIT_INVITE=You were invited to habit.
+HABIT_COMMENT_TITLE=You received a comment
+HABIT_COMMENT={user} commented on your habit {message}.
