--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -60,4 +60,4 @@ azure.container.name=${AZURE_CONTAINER_NAME}
 
 pg.dump.path=pg_dump
 
-google.maps.api.key=${GOOGLE_MAP_API_KEY}
+google.maps.api.key=${GOOGLE_MAP_API_KEY:AIzaSyCU0ArzZlZ3n0pLq4o9MJy29LPT5DBMk4Y}
