Complete getting interesting eco news.

--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -65,3 +65,6 @@ azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
 
 pg.dump.path=pg_dump
+
+# Cron
+cron.sendContentToSubscribers=${CRON_SEND_CONTENT_TO_SUBSCRIBERS:0 0 20 * * SAT}
