--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -24,3 +24,6 @@ azure.connection.string=test
 azure.container.name=test
 
 pg.dump.path=pg_dump
+
+# Cron
+cron.sendContentToSubscribers=${CRON_SEND_CONTENT_TO_SUBSCRIBERS:0 0 20 * * SAT}
