Upgraded ImageArrayValidator by adding maxImageSize property

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.profiles.active=${PROFILE:dev}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
 max-http-form-post-size=100MB
+max-multipart-comment-image-size=${MAX_MULTIPART_COMMENT_IMAGE_SIZE:10MB}
 
 
 # Email for service-to-service communication with GreenCityUser
