--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.servlet.multipart.max-request-size=100MB
 max-http-form-post-size=100MB
 max-multipart-comment-image-size=${MAX_MULTIPART_COMMENT_IMAGE_SIZE:10MB}
 
+# Security type
+use-https=${USE_HTTPS:false}
 
 # Email for service-to-service communication with GreenCityUser
 spring.liquibase.parameters.service-email=service@greencity.ua
