--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -6,6 +6,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 address=http://localhost:8080
 google.maps.api.key=""
 
+#Security Cookies
+use-secure-cookies=${USE_SECURE_COOKIES:false}
+
 #RestTemplate
 greencityuser.server.address=http://localhost:8080
 
