Fixed Issues according to new changes

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -41,6 +41,8 @@ HABIT_INVITE_TITLE=Habit invitation.
 HABIT_INVITE=You were invited to habit.
 HABIT_COMMENT_TITLE=You received a comment
 HABIT_COMMENT={user} commented on your habit {message}.
+HABIT_COMMENT_LIKE_TITLE=You received a like.
+HABIT_COMMENT_LIKE={user} liked your comment {message} to habit {secondMessage}.
 HABIT_COMMENT_REPLY_TITLE=You received a comment reply
 HABIT_COMMENT_REPLY={user} commented your comment {message} to Habit {secondMessage}.
 HABIT_COMMENT_USER_TAG_TITLE=You have been tagged in the comment.
