Changed comment messages

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -1,5 +1,8 @@
 USERS=users
 
+COMMENT=comment
+COMMENTS=comments
+
 ECONEWS_COMMENT_LIKE_TITLE=You received a like.
 ECONEWS_COMMENT_LIKE={user} liked your comment {message} to EcoNews {secondMessage}.
 ECONEWS_COMMENT_REPLY_TITLE=You received a comment reply
@@ -12,14 +15,14 @@ EVENT_COMMENT_USER_TAG_TITLE=You have been tagged in the comment.
 EVENT_COMMENT_USER_TAG={user} mention you in comment {message} to event {secondMessage}.
 
 ECONEWS_COMMENT_TITLE=You received a comment
-ECONEWS_COMMENT={user} commented on your news {message}.
+ECONEWS_COMMENT=You received {message} from {user} on your news «{secondMessage}».
 ECONEWS_CREATED_TITLE=You have created eco news
 ECONEWS_CREATED=You successfully created eco news {message}.
 ECONEWS_LIKE_TITLE=Your news received a like
 ECONEWS_LIKE=News {message} received a like from {user}.
 
 EVENT_COMMENT_TITLE=You received a comment
-EVENT_COMMENT={user} commented on your event {message}.
+EVENT_COMMENT=You received {message} from {user} on your event «{secondMessage}».
 EVENT_CANCELED_TITLE=Event was canceled
 EVENT_CANCELED=Unfortunately, event {message} was canceled.
 EVENT_CREATED_TITLE=You have created event
