--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -20,6 +20,8 @@ ECONEWS_CREATED_TITLE=You have created eco news
 ECONEWS_CREATED=You successfully created eco news {message}.
 ECONEWS_LIKE_TITLE=Your news received a like
 ECONEWS_LIKE=News {message} received a like from {user}.
+ECONEWS_COMMENT_USER_TAG_TITLE=You have been tagged in the comment.
+ECONEWS_COMMENT_USER_TAG={user} mention you in comment {message} to eco news {secondMessage}.
 
 EVENT_COMMENT_TITLE=You received a comment
 EVENT_COMMENT=You received {message} from {user} on your event «{secondMessage}».
