--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -42,6 +42,7 @@ FRIEND_REQUEST_RECEIVED_TITLE=You have received a friend request
 FRIEND_REQUEST_RECEIVED={user} sent you a friend request.
 
 HABIT_LIKE=Habit {message} received a like from {user}.
+HABIT_LIKE_TITLE=Your habit received a like
 HABIT_INVITE_TITLE=Habit invitation.
 HABIT_INVITE=You were invited to habit.
 HABIT_COMMENT_TITLE=You received a comment
