--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -53,3 +53,6 @@ HABIT_COMMENT_REPLY_TITLE=You received a comment reply
 HABIT_COMMENT_REPLY={user} commented your comment {message} to Habit {secondMessage}.
 HABIT_COMMENT_USER_TAG_TITLE=You have been tagged in the comment.
 HABIT_COMMENT_USER_TAG={user} mention you in comment {message} to Habit {secondMessage}.
+
+PLACE_STATUS=Your proposed place "{message}" has been {secondMessage}.
+PLACE_STATUS_TITLE=Proposed place status changed
