Done send immediate report about new places sing scheduled notifications.

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -56,3 +56,5 @@ HABIT_COMMENT_USER_TAG={user} mention you in comment {message} to Habit {secondM
 
 PLACE_STATUS=Your proposed place "{message}" has been {secondMessage}.
 PLACE_STATUS_TITLE=Proposed place status changed
+PLACE_ADDED=New {message} place "{secondMessage}" have been added.
+PLACE_ADDED_TITLE=New places
