Fixed Swagger documentation and added messages according to language

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -35,6 +35,8 @@ EVENT_NAME_UPDATED_TITLE=Event was updated
 EVENT_NAME_UPDATED=Event {message} was updated. New name is {secondMessage}.
 EVENT_UPDATED_TITLE=Event was updated
 EVENT_UPDATED=Event {message} was updated.
+EVENT_LIKE_TITLE=Your event received a like.
+EVENT_LIKE=Event {message} received a like from {user}.
 
 FRIEND_REQUEST_ACCEPTED_TITLE=Your friend request was accepted
 FRIEND_REQUEST_ACCEPTED={user} accepted your friend request.
