--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -53,6 +53,8 @@ HABIT_COMMENT_REPLY_TITLE=You received a comment reply
 HABIT_COMMENT_REPLY={user} commented your comment {message} to Habit {secondMessage}.
 HABIT_COMMENT_USER_TAG_TITLE=You have been tagged in the comment.
 HABIT_COMMENT_USER_TAG={user} mention you in comment {message} to Habit {secondMessage}.
+HABIT_LAST_DAY_OF_PRIMARY_DURATION_TITLE=Today is last day of your habit primary duration
+HABIT_LAST_DAY_OF_PRIMARY_DURATION=Today the duration of your habit {message} is run out. To get more information go to Habit's page
 
 PLACE_STATUS=Your proposed place "{message}" has been {secondMessage}.
 PLACE_STATUS_TITLE=Proposed place status changed
