--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -77,6 +77,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>6.1.14</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
