update swagger generated body, update swagger example

--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -97,5 +97,10 @@
             <version>${jakarta.servlet.api.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 </project>
